--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,11 @@
 
+spring.datasource.url=jdbc:h2:mem:rajesh
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+
+spring.jpa.show-sql=true
+
+server.port=5052
